// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with levels @250px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="250"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(50.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(100.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(150.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(200.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              80 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(250.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100 %
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="150"
            opacity="0.2"
            width="25"
            x="225"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="150"
            opacity="0.2"
            width="100"
            x="125"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="150"
            opacity="0.2"
            width="125"
            x="0"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="250"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="37.5"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="75"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="25"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            fill="white"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="232"
            y="25.674418604651155"
          >
            100 %
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="53.5"
            y="60.55813953488371"
          >
            15 %
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="91"
            y="95.44186046511626"
          >
            30 %
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="41"
            y="130.32558139534882"
          >
            10 %
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render with levels @500px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(83.14462809917356,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(165.78925619834712,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(248.43388429752068,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,6
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(331.07851239669424,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,8
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(413.72314049586777,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(496.36776859504135,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              1,2
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="150"
            opacity="0.2"
            width="41.32231404958674"
            x="371.90082644628103"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="150"
            opacity="0.2"
            width="165.28925619834715"
            x="206.61157024793388"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="150"
            opacity="0.2"
            width="206.61157024793388"
            x="0"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="413.22314049586777"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="61.98347107438017"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="123.96694214876034"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="41.32231404958678"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            fill="white"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="395.22314049586777"
            y="25.674418604651155"
          >
            1
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="77.98347107438016"
            y="60.55813953488371"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="139.96694214876032"
            y="95.44186046511626"
          >
            0
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="57.32231404958678"
            y="130.32558139534882"
          >
            0
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render with levels reversed @500px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(100.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(200.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(300.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(400.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              80 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(500.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100 %
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="150"
            opacity="0.2"
            width="250"
            x="0"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="150"
            opacity="0.2"
            width="200"
            x="250"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="150"
            opacity="0.2"
            width="50"
            x="450"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="500"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="75"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="150"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="50"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            fill="white"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="482"
            y="25.674418604651155"
          >
            100 %
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="91"
            y="60.55813953488371"
          >
            15 %
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="166"
            y="95.44186046511626"
          >
            30 %
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="66"
            y="130.32558139534882"
          >
            10 %
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render without levels @250px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="250"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(50.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              20 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(100.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              40 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(150.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              60 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(200.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              80 %
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(250.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100 %
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        />
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="250"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="37.5"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="75"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="25"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            fill="white"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="232"
            y="25.674418604651155"
          >
            100,0 %
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="53.5"
            y="60.55813953488371"
          >
            15,0 %
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="91"
            y="95.44186046511626"
          >
            30,0 %
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="41"
            y="130.32558139534882"
          >
            10,0 %
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render without levels @500px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(83.14462809917356,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,2
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(165.78925619834712,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,4
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(248.43388429752068,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,6
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(331.07851239669424,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0,8
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(413.72314049586777,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              1
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(496.36776859504135,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              1,2
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        />
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="413.22314049586777"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="61.98347107438017"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="123.96694214876034"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="41.32231404958678"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            fill="white"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="395.22314049586777"
            y="25.674418604651155"
          >
            1,00
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="77.98347107438016"
            y="60.55813953488371"
          >
            0,15
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="139.96694214876032"
            y="95.44186046511626"
          >
            0,30
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            fill="rgb(0, 0, 0)"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="57.32231404958678"
            y="130.32558139534882"
          >
            0,10
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;

exports[`Render zoomed with levels @500px 1`] = `
<div>
  <div
    style="width: 90%; margin: auto;"
  >
    <svg
      class="barChart"
      height="150"
      style="background-color: white;"
      width="500"
    >
      <g
        transform="translate(0, 0)"
      >
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          style="transform: translateY(150px);"
          text-anchor="middle"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0.5,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(74.77102984209978,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              100
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(149.04205968419956,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              200
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(223.31308952629936,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              300
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(297.5841193683991,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              400
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(371.85514921049895,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(446.12617905259873,0)"
          >
            <line
              stroke="#D2D3D4"
              y2="-150"
            />
            <text
              dy="0.71em"
              fill="#828586"
              font-size="18.57px"
              y="3"
            >
              600
            </text>
          </g>
        </g>
        <g
          class="y-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
        >
          <g
            class="tick"
            opacity="1"
            transform="translate(0,22.674418604651155)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              a
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,57.55813953488371)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              b
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,92.44186046511626)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              c
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,127.32558139534882)"
          >
            <text
              dy="0.32em"
              fill="currentColor"
              font-size="1.2rem"
              x="-9"
            >
              d
            </text>
          </g>
        </g>
        <g
          class="levels"
        >
          <rect
            class="level"
            data-testid="level-high"
            fill="#3baa34"
            height="150"
            opacity="0.2"
            width="202.91588063160088"
            x="297.0841193683991"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-mid"
            fill="#fd9c00"
            height="150"
            opacity="0.2"
            width="148.54205968419956"
            x="148.54205968419956"
            y="0"
          />
          <rect
            class="level"
            data-testid="level-low"
            fill="#e30713"
            height="150"
            opacity="0.2"
            width="148.54205968419956"
            x="0"
            y="0"
          />
        </g>
        <g
          class="bars"
        >
          <rect
            class="bar"
            data-testid="bar-a"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="124.77533013472764"
            x="0"
            y="10.465116279069761"
          />
          <rect
            class="bar"
            data-testid="bar-b"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="115.12009625525467"
            x="0"
            y="45.34883720930232"
          />
          <rect
            class="bar"
            data-testid="bar-c"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="288.9143060857682"
            x="0"
            y="80.23255813953487"
          />
          <rect
            class="bar"
            data-testid="bar-d"
            fill="#7EBEC7"
            height="24.418604651162788"
            opacity="1"
            width="416.66047741417975"
            x="0"
            y="115.11627906976743"
          />
        </g>
        <g
          class="labels"
        >
          <text
            class="label"
            data-testid="bar-label-a"
            fill="white"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="106.77533013472764"
            y="25.674418604651155"
          >
            168
          </text>
          <text
            class="label"
            data-testid="bar-label-b"
            fill="white"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="97.12009625525467"
            y="60.55813953488371"
          >
            155
          </text>
          <text
            class="label"
            data-testid="bar-label-c"
            fill="white"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="270.9143060857682"
            y="95.44186046511626"
          >
            389
          </text>
          <text
            class="label"
            data-testid="bar-label-d"
            fill="white"
            font-size="0.7em"
            opacity="0.9"
            text-anchor="middle"
            x="398.66047741417975"
            y="130.32558139534882"
          >
            561
          </text>
        </g>
      </g>
    </svg>
  </div>
</div>
`;
